Fri Apr 23 09:08:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
          Created a unique name for a contentfilteredTopic, using
          a prefix in combination with the name of the original topic.
          This'll prevent errors when more than one filter is used in
          several connectors.

Fri Apr 23 09:53:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * docs/OMG-CCM-Tutorial.ppt
        Made changes for AMI4CCM.

Fri Apr 23 08:47:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Removed !FIXED_BUG_ONLY flag from the
          QueryFilter test.

        * connectors/dds4ccm/impl/dds/DDS_Get_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/dds/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Subscriber_Base_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.cpp:
          Created a templated base class for Subscribing ports.
          This in preparation of a issue with contentfilteredTopics.
          It also reduces the amount of code.

Fri Apr 23 07:10:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataWriter.cpp:
        * connectors/dds4ccm/impl/dds/DataWriterListener.h:
        * connectors/dds4ccm/impl/dds/DataWriterListener.cpp:
        * connectors/dds4ccm/impl/dds/PublisherListener.h:
        * connectors/dds4ccm/impl/dds/PublisherListener.cpp: