@@ -173,11 +173,6 @@ accomplishment) :
           ComponentServer. This change is essential to the RT
           configuration and for the future of CIAO.<p>
 
-      <li>Bala added ciao_[pre|post]_activate to the Session Component to
-          force the order of actions upon start-up, but this will not
-	  work with the new DnC framework. We need to change the DnC framework
-	  a bit to make this feature available again.<p>
-
       <li>We need to work on the Resource Management process in
           DAnCE. Right now this part of the DnC spec is omitted in our
           implementation.<p>
